--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.12",
+    "flag-icon-css": "^4.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-phone-input-2": "^2.15.1",
+    "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
