--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
