--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.12",
     "flag-icon-css": "^4.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "fedapay-reactjs": "^1.1.2",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-phone-input-2": "^2.15.1",
